<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="medialibrary">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer</string>
    <string name="email_address">max-post@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_app_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_connections">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">История поиска</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="template_time_elapsed">--:--</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="medialibrary_empty">Ваша медиатека пуста</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="timer_zero">00:00</string>
    <string name="timer_placeholder">__:__</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="playlistTitle">Название*</string>
    <string name="new_play_list_description">Описание</string>
    <string name="play_list_dialog_title">Завершить создание плейлиста?</string>
    <string name="play_list_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="play_list_dialog_negative">Отмена</string>
    <string name="play_list_dialog_positive">Завершить</string>
    <string name="play_list_created">Плейлист %1$s создан</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_play_list_dialog_title">Завершить редактирование плейлиста?</string>
    <string name="playlist_updated">Плейлист %1$s обновлен</string>
    <string name="do_you_want_delete_track">Удалить трек?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="there_is_no_tracks">Тут нет ни одного трека</string>
    <string name="there_is_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete">Удалить</string>
    <string name="are_you_sure_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="are_you_sure_to_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <plurals name="track_plurals">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="minutes_plurals">
        <item quantity="zero">минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>