<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/NavigationToolBar"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/arrow_back"
            style="@style/NavigationToolBarIcon"/>

        <TextView
            android:text="@string/settings"
            style="@style/NavigationToolBarText"

            />
    </LinearLayout>
    <LinearLayout
        style="@style/PlaceholderAfterNavigationToolBar"/>

    <FrameLayout
        style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/dark_theme"/>

        <ImageView
            style="@style/SettingsMenuRowIcon"
            android:src="@drawable/control"
            android:paddingEnd="6dp"
            android:paddingStart="9dp"
            />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/share_app"/>

        <ImageView
            style="@style/SettingsMenuRowIcon"
            android:src="@drawable/share"
            app:tint="@color/icon_grey"
            />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/write_to_support"/>

        <ImageView
            style="@style/SettingsMenuRowIcon"
            android:src="@drawable/support"
            />
    </FrameLayout>
    <FrameLayout
        style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/user_agreement"/>

        <ImageView
            style="@style/SettingsMenuRowIcon"
            android:src="@drawable/arrow_forward"
            />
    </FrameLayout>

</LinearLayout>