<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">

    <LinearLayout
        style="@style/NavigationToolBar"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/NavigationToolBarText"
            android:text="@string/settings"

            />
    </LinearLayout>

    <LinearLayout style="@style/PlaceholderAfterNavigationToolBar" />

    <FrameLayout style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/themeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:thumbTint="?attr/thumbTint"
            app:trackTint="?attr/trackTint" />
    </FrameLayout>

    <FrameLayout style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/shareAppIcon"
            style="@style/SettingsMenuRowIcon"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/writeToSupportIcon"
            style="@style/SettingsMenuRowIcon"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout style="@style/SettingsMenuRow">

        <TextView
            style="@style/SettingsMenuRowText"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/termsOfUseArrow"
            style="@style/SettingsMenuRowIcon"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>

</LinearLayout>