<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="18dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/menu_black"
        android:textSize="@dimen/font_size_medium"
        app:cornerRadius="@dimen/main_menu_button_corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/menu_black"
        android:foreground="?attr/selectableItemBackground" />

    <Button
        android:id="@+id/medialibrary_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/medialibrary"
        android:textAllCaps="false"
        android:textColor="@color/menu_black"
        android:textSize="@dimen/font_size_medium"
        app:cornerRadius="@dimen/main_menu_button_corner_radius"
        app:icon="@drawable/medialibrary"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/menu_black"
        android:foreground="?attr/selectableItemBackground" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/menu_black"
        android:textSize="@dimen/font_size_medium"
        app:cornerRadius="@dimen/main_menu_button_corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/menu_black"
        android:foreground="?attr/selectableItemBackground" />

</LinearLayout>